Get METADATA annotations.

METADATA doesn't allow a wildcard as entry specifier.

BUG: 313159